service line item added